# internal/catalog/application/category_dto.go
@@ -1,0 +1,15 @@
+package application
+
+import "time"
+
+type CreateCategoryInput struct {
+	Name     string  `json:"name"`
+	ParentID *string `json:"parent_id"`
+}
+
+type CreateCategoryOutput struct {
+	ID        string    `json:"id"`
+	Name      string    `json:"name"`
+	ParentID  *string   `json:"parent_id"`
+	CreatedAt time.Time `json:"created_at"`
+}
